# IE_v1

./: .gitignore  CMakeLists.txt  README.md  test_config_temp.c  test_encoding_temp.c  test_gb_temp.c  test_llm_temp.c  test_memory_tmp.c  test_nlp_temp.c  test_rules_temp.c  test_tok_temp.c  test_undo_temp.c
data/rule_templates/: test_rules.json
docs/: architecture.md
include/editor/: exporter.h  formatter.h  gap_buffer.h  search_replace.h  undo_redo.h
include/llm/: json_parser.h  llm_interface.h  llm_thread.h  prompts.h
include/nlp/: hunspell_wrap.h  nlp_engine.h  tokenizer.h
include/rules/: rule_engine.h  rule_parser.h  rule_report.h
include/rules/checkers/: count_checker.h  regex_checker.h  section_checker.h
include/ui/: dialogs.h  main_window.h  rules_panel.h  scintilla_wrapper.h  statusbar.h  toolbar.h
include/utils/: config.h  encoding.h  memory.h
src/: main.c
src/editor/: exporter.c  formatter.c  gap_buffer.c  search_replace.c  undo_redo.c
src/llm/: json_parser.c  llm_interface.c  llm_thread.c  prompts.c
src/nlp/: hunspell_wrap.c  nlp_engine.c  tokenizer.c
src/rules/: rule_engine.c  rule_parser.c  rule_report.c
src/rules/checkers/: count_checker.c  regex_checker.c  section_checker.c
src/ui/: dialogs.c  main_window.c  rules_panel.c  scintilla_wrapper.c  statusbar.c  toolbar.c
src/utils/: config.c  encoding.c  memory.c
